app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  #type: NodePort #замена port-forward
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 8080          
      targetPort: 8082
     # nodePort: 30001 # для NodePort
