app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - http:
        paths:
        - path: /test_project
          pathType: Prefix
          backend:
            service:
              name: app-service
              port:
                number: 8080
